# MurasamePet

./: .gitignore  GPT_SOVITS_STREAMLINED.md  PYTHON_VERSION_DETECTION.md  README.md  STREAMLINE_SUMMARY.md  api.py  check_mps.py  config.example.json  config.json  download.py  pet.py  prompt.txt  pyproject.toml  requirements.txt  requirements_ver.txt  run.sh  run_project.py  start_tts.sh  test_tts.py
Murasame/: chat.py
gpt_sovits/: README.md  api.py  api_v2.py  install.ps1  install.sh
gpt_sovits/GPT_SoVITS/: download.py  export_torch_script.py  inference_webui.py  onnx_export.py  s1_train.py  sv.py
gpt_sovits/GPT_SoVITS/AR/data/: data_module.py
gpt_sovits/GPT_SoVITS/AR/models/: t2s_lightning_module_onnx.py  t2s_model_onnx.py
gpt_sovits/GPT_SoVITS/AR/modules/: activation_onnx.py  transformer_onnx.py
gpt_sovits/GPT_SoVITS/AR/text_processing/: phonemizer.py
gpt_sovits/GPT_SoVITS/BigVGAN/: __init__.py
gpt_sovits/GPT_SoVITS/TTS_infer_pack/: TTS.py  TextPreprocessor.py
gpt_sovits/GPT_SoVITS/module/: models.py
gpt_sovits/GPT_SoVITS/prepare_datasets/: 1-get-text.py
gpt_sovits/GPT_SoVITS/text/: __init__.py  cantonese.py  cleaner.py  korean.py
gpt_sovits/GPT_SoVITS/text/g2pw/: __init__.py
gpt_sovits/configs/: tts_infer.yaml
