[project]
name = "murasame-pet"
version = "0.1.0"
description = "MurasamePet desktop application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.116.1",
    "numpy>=1.26.0",
    "opencv_contrib_python==4.11.0.86",
    "opencv_python==4.11.0.86",
    "Pillow==11.3.0",
    "pyautogui==0.9.54",
    "PyQt5==5.15.11",
    "PyQt5_sip==12.17.0",
    "Requests==2.32.5",
    "rich==14.1.0",
    "torch>=2.0.0",
    "transformers==4.54.1",
    "uvicorn==0.35.0",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]