[project]
name = "murasame-pet"
version = "0.1.0"
description = "MurasamePet desktop application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.116.1",
    "numpy>=1.26.0",
    "opencv_contrib_python==4.11.0.86",
    "opencv_python==4.11.0.86",
    "Pillow==11.3.0",
    "pyautogui==0.9.54",
    "PyQt5==5.15.11",
    "PyQt5_sip==12.17.0",
    "Requests==2.32.5",
    "rich==14.1.0",
    "torch>=2.0.0",
    "transformers==4.54.1",
    "modelscope",
    "uvicorn==0.35.0",
    "scipy",
    "tensorboard",
    "librosa==0.10.2",
    "numba",
    "pytorch-lightning>=2.4",
    "gradio<5",
    "ffmpeg-python",
    "onnxruntime<1.20.0",
    "tqdm",
    "funasr==1.0.27",
    "cn2an",
    "pypinyin",
    "pyopenjtalk>=0.4.1",
    "g2p_en",
    "torchaudio",
    "sentencepiece",
    "peft",
    "chardet",
    "PyYAML",
    "psutil",
    "jieba_fast",
    "jieba",
    "split-lang",
    "fast_langdetect>=0.3.1",
    "wordsegment",
    "rotary_embedding_torch",
    "ToJyutping",
    "g2pk2",
    "ko_pron",
    "opencc",
    "python_mecab_ko",
    "x_transformers",
    "torchmetrics<=1.5",
    "pydantic<=2.10.6",
    "ctranslate2>=4.0,<5",
    "huggingface_hub>=0.13",
    "tokenizers>=0.13,<1",
    "av>=11",
    "ar>=1.0.0",
    "urllib3<2.0.0",
    "mlx>=0.12.0; sys_platform == 'darwin'",  # 只在 macOS 上安装
    "mlx-lm>=0.12.0; sys_platform == 'darwin'",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
